SERVER-50643: fix coverity parse warning in DocumentSourceMock