src/mongo/db/pipeline/document_source_mock.h
@@ -70,7 +70,7 @@ public:
 
     const char* getSourceName() const override;
 
-    const size_t size() const;
+    size_t size() const;
 
     void reattachToOperationContext(OperationContext* opCtx) {
         isDetachedFromOpCtx = false;
